<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0DEDA"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="18">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/adv_settings_bio"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView

            android:id="@+id/about_me_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="650" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/adv_settings_interests"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView

            android:id="@+id/interest_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/adv_settings_hobbies"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView

            android:id="@+id/hobbies_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_columnWeight="1" />


    </GridLayout>

</ScrollView>