<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <!-- HEADER TEXT -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_settings_general_info_header_text"
        android:text="@string/ps_general_info_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <!-- NAME LABELS -->
    <GridLayout
        android:id="@+id/general_info_name_labels_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1"
        app:layout_constraintTop_toBottomOf="@id/profile_settings_general_info_header_text">

        <TextView
            android:id="@+id/general_info_first_name_field_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ps_general_info_first_name_label"
            android:layout_columnWeight="1"/>

        <TextView
            android:id="@+id/general_info_last_name_field_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ps_general_info_last_name_label"
            android:layout_columnWeight="1"/>
    </GridLayout>

    <!--NAME TEXT FIELDS -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="1"
        android:columnCount="2"
        android:id="@+id/general_info_name_fields_grid"
        app:layout_constraintTop_toBottomOf="@id/general_info_name_labels_grid">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/general_info_first_name_field_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/ucsd_navy_blue"
            android:layout_columnWeight="1">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/general_info_first_name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/general_info_last_name_field_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/ucsd_navy_blue"
            android:layout_columnWeight="1">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/general_info_last_name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

    </GridLayout>

    <!-- QUESTIONS -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        app:layout_constraintTop_toBottomOf="@id/general_info_name_fields_grid">

        <!-- GENDER -->
        <TextView
            android:id="@+id/general_info_gender_label"
            android:text="@string/ps_general_info_gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/general_info_name_fields_grid"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/general_info_gender_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </androidx.appcompat.widget.AppCompatSpinner>

        <!-- ACADEMIC YEAR -->

        <!-- COLLEGE -->

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>